<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#31B3B3"
    tools:context=".StartUpActivity.Log_in">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="#00FFAE"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="6dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="199dp"
                android:src="@drawable/book1"
                />
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back_sir"
                android:textColor="#F19800"
                android:textAlignment="center"
                android:textSize="25sp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="#FF6600"
                app:hintTextColor="#070707"
                app:boxStrokeWidth="0dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/alreadyemail"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:paddingStart="10dp"
                    android:textIsSelectable="true"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_address"
                    android:textColorHint="@color/black"
                    android:layout_marginBottom="10dp"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="#FF6600"
                app:hintTextColor="#070707"
                app:passwordToggleEnabled="true"
                app:boxStrokeWidth="0dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/alreadypassfield"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:inputType="textPassword"
                    android:textColorHint="@color/black"
                    android:hint="Password"

                    android:layout_marginBottom="10dp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/forgetpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:textAlignment="textEnd"
                android:textStyle="bold"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:text="log in"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:background="@drawable/continuebutton"
                android:layout_marginBottom="10dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/google_login"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:text="@string/continue_with_google"
                android:textColor="@color/white"
                android:background="@drawable/google_login_button"
                android:layout_marginBottom="10dp"
                android:drawableEnd="@drawable/google"
                />
            <TextView
                android:id="@+id/createaccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/create_a_new_account"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>