<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E600FF"
    tools:context=".StartUpActivity.SignIn">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="#D3D3D3"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="6dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="199dp"
                android:src="@drawable/book2"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/create_an_account"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="#FF6600"
                app:boxStrokeWidth="0dp"
                app:hintTextColor="#070707">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailfield"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:textColorHint="@color/black"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="#FF6600"
                app:boxStrokeWidth="0dp"
                app:hintTextColor="#070707"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passfield"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:textColorHint="@color/black"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createbutton"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/continuebutton"
                android:text="@string/create_an_account"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/google_creation"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/google_login_button"
                android:text="@string/continue_with_google"
                android:textColor="@color/white" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/alreadyfield"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:text="Already have an account?"
                />
            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Log in"
                android:textSize="15sp"
                android:layout_marginStart="2sp"
                android:textColor="#0073FF"
                android:textStyle="bold"
                />
        </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>